# OpenGLESDemo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/jason/openglesdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidOut.h  CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp
app/src/main/java/com/jason/openglesdemo/: FullScreenGameActivity.kt  MainActivity.kt
app/src/test/java/com/jason/openglesdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
